syntax = "proto3";

package api.payment.service.v1;

option go_package = "casso/api/payment/service/v1;v1";

service Payment {
    rpc CreatePayment (CreatePaymentRequest) returns (CreatePaymentReply);
}

message CreatePaymentRequest {
    string order_no = 1;
    int64 pay_type = 2;
}
message CreatePaymentReply {}

